Fixed some visual bugs

--- a/styles/articles.css
+++ b/styles/articles.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color-A: #FF7E40;
     --primary-color-B: #A63600;
-    --secondary-color-A: #A66200;
+    --secondary-color-A: #FFC300;
     --secondary-color-B: #FFB140;
 }
 
