--- a/styles/sign-in-up.css
+++ b/styles/sign-in-up.css
@@ -279,13 +279,15 @@
     }
 }
 
-@media screen and (max-height: 800px) {
-    .guest-forms form {
-        padding: 0.5rem;
-    }
-
+@media screen and (max-height: 720px) {
     .registrate-form {
         bottom: 0;
+    }
+}
+
+@media screen and (max-width: 510px) and (max-height: 720px) {
+    .guest-forms form {
+        padding: 0.5rem;
     }
 
     .registrate-form label {
